package Enums;

public enum Destination {
    PARIS,
    ROME,
    BARCELONA,
    NEWYORK,
    FRANKFURT,
    OSLO,
}


